# ElevenTools

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  API_Management.py  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Elevenlabs.py  Elevenlabs_functions.py  Home.py  LICENSE  Openai_functions.py  Pipfile  README.md  SECURITY.md  Translation_functions.py  VALIDATION_API_KEYS.md  app.py  bulk_template.csv  custom_style.css  design.md  docker-compose.yml  eleventools-design-document.md  functions.py  main.py  ollama_functions.py  prioritized-todo-list.md  pyproject.toml  template_norlid.csv  test_elevenlabs_functions.py  test_functions.py  todo.md
.cursor/rules/: README.md  streamlit-components-patterns.mdc  streamlit-security-performance.mdc  uv-streamlit-workflow.mdc
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml
docs/: architecture.md  design.md  testing-core-suite.md  todo.md
docs/guides/: elevenlabs_tts_guide.md
docs/screenshots/: .gitkeep
guides/: elevenlabs_tts_guide.md
navigation/: Bulk_Generation.py
openspec/: PROPOSAL_STATUS_REVIEW.md  project.md
openspec/changes/add-bulk-template-download-button/: proposal.md
openspec/changes/add-dynamic-model-capabilities/: proposal.md  tasks.md
openspec/changes/add-function-docstrings/: tasks.md
openspec/changes/add-model-search-translation/: proposal.md  tasks.md
openspec/changes/add-model-voice-compatibility-tests/: proposal.md
openspec/changes/add-session-based-file-management/: design.md  tasks.md
openspec/changes/add-v3-audio-tags-enhancement/: proposal.md  tasks.md
openspec/changes/archive/2025-11-08-add-dynamic-model-capabilities/: design.md  tasks.md
openspec/changes/archive/2025-11-08-add-model-voice-compatibility-tests/: tasks.md
openspec/changes/archive/2025-11-08-add-session-based-file-management/: MIGRATION_NOTES.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-08-fix-memory-leaks-security-issues/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-08-fix-streamlit-cloud-secrets-management/: design.md  proposal.md
openspec/changes/archive/2025-11-08-remove-seed-settings/: proposal.md
openspec/changes/archive/2025-11-29-add-bulk-template-download-button/: tasks.md
openspec/changes/archive/2025-11-29-add-function-docstrings/: proposal.md
openspec/changes/archive/2025-11-29-add-model-search-translation/: tasks.md
openspec/changes/archive/2025-11-29-convert-api-management-to-settings/: tasks.md
openspec/changes/archive/2025-11-29-optimize-test-coverage/: proposal.md
openspec/changes/archive/2025-11-29-remove-ci-streamlit-cloud-only/: proposal.md  tasks.md
openspec/changes/convert-api-management-to-settings/: design.md  proposal.md  tasks.md
openspec/changes/fix-memory-leaks-security-issues/: tasks.md
openspec/changes/fix-sidebar-font-consistency/: proposal.md  tasks.md
openspec/changes/fix-streamlit-cloud-secrets-management/: tasks.md
openspec/changes/optimize-test-coverage/: design.md  tasks.md
openspec/changes/remove-seed-settings/: tasks.md
openspec/changes/review-test-suite/: SPEC_ALIGNMENT_REVIEW.md  TEST_REVIEW_REPORT.md  tasks.md
openspec/changes/update-readme-status/: TEST_FIXES_SUMMARY.md  proposal.md  tasks.md
openspec/specs/bulk-generation/: spec.md
openspec/specs/code-documentation/: spec.md
openspec/specs/deployment/: spec.md
openspec/specs/file-management/: spec.md
openspec/specs/settings/: spec.md
openspec/specs/testing/: spec.md
openspec/specs/translation/: spec.md
openspec/specs/tts-generation/: spec.md
openspec/specs/voice-design/: spec.md
pages/: 1_Voice_Design.py  2_Bulk_Generation.py  3_Translation.py  API_Management.py  Bulk_Generation.py  File_Explorer.py  Ollama_Setup.py  Settings.py  Voice_Design.py  batch.py  bulk.py
scripts/: Elevenlabs_functions.py  Translation_functions.py  check_core_suite.py  functions.py  main.py  ollama_functions.py  openrouter_functions.py
tests/: conftest.py
tests/test_api/: test_elevenlabs_core.py  test_elevenlabs_functions.py  test_ollama_functions.py  test_openrouter_core.py  test_openrouter_functions.py  test_openrouter_model_functions.py
tests/test_utils/: test_api_keys.py  test_core_utilities.py  test_functions.py  test_model_capabilities.py  test_security.py  test_session_manager.py
tests/test_web/: test_file_explorer.py  test_pages_core.py  test_streamlit_pages.py
tests/ui_tests/: README.md  __init__.py  conftest.py  test_api_management_page.py  test_bulk_generation_page.py  test_file_explorer_page.py  test_main_page.py  test_settings_page.py  test_sidebar_font_consistency.py  test_translation_page.py
utils/: api_keys.py  caching.py  error_handling.py  memory_monitoring.py  model_capabilities.py  security.py  session_manager.py
(+29 files in other folders)
