[project]
name = "eleventools"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.32.0",
    "black>=24.0.0",
    "openai>=1.12.0",
    "urllib3>=2.2.0",
    "pytest>=8.0.0",
    "pyperclip>=1.8.2",
    "elevenlabs>=0.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pytest-cov>=4.1.0",
    "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "isort>=5.13.0"
]

[dependency-groups]
dev = [
    "playwright>=1.55.0",
    "pytest-mock>=3.15.1",
    "pytest-playwright>=0.7.1",
]

[tool.pytest.ini_options]
markers = [
    "core_suite: curated regression tests that must remain under 100 collected cases",
    "extended: optional coverage executed outside the core suite",
    "no_api_key: tests covering missing API key scenarios",
]
addopts = "-m core_suite"
